# e-commerce

./: README.md  db.sqlite3  main.py  model_relation.dot  pyproject.toml
cart/: admin.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
cart/admin/: permissions.py
cart/migrations/: 0001_initial.py  0002_initial.py  0003_remove_cart_session_key.py
commerce/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
commerce/migrations/: 0001_initial.py  0002_alter_order_order_id.py  0002_delete_userprofile.py  0002_initial.py  0003_alter_order_order_id.py  0003_author_order_orderitem_product_delete_bookid_and_more.py  0004_alter_order_order_id.py  0004_remove_product_author_alter_order_order_id_cart_user_and_more.py  0005_alter_category_options_alter_product_options_and_more.py  0005_order_updated_at_alter_order_order_id_and_more.py  0006_alter_cart_user_alter_order_order_id_and_more.py  0006_alter_order_order_id.py  0007_remove_cart_product_remove_cart_quantity_and_more.py  0007_remove_product_color_remove_product_price_and_more.py  0008_product_color_product_size_alter_order_order_id.py  0009_alter_order_order_id.py  0011_alter_order_order_id.py  (+14 more)
core/: settings.py  urls.py
merchant/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
order/: admin.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
product/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
users/: managers.py  models.py  serializers.py  urls.py  views.py
(+32 files in other folders)
